--- a/02_Workshops/WS_02_Libraries_Numpy/DSML_WS_02_pre.ipynb
+++ b/02_Workshops/WS_02_Libraries_Numpy/DSML_WS_02_pre.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,13 +83,12 @@
     "        result = first_num / second_num\n",
     "        return f\"{first_num} / {second_num} = {result}\"\n",
     "    else:\n",
-    "        return \"Error: Invalid operation\"\n",
-    "        "
+    "        return \"Error: Invalid operation\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -99,7 +98,7 @@
       "10 - 5 = 5\n",
       "10 + 5 = 15\n",
       "10 * 5 = 50\n",
-      "Error: Division by zero is not allowed\n",
+      "10 / 3 = 3.3333333333333335\n",
       "Error: Invalid operation\n"
      ]
     }
@@ -109,7 +108,7 @@
     "print(simple_calc(10, \"minus\", 5))   \n",
     "print(simple_calc(10, \"plus\", 5))   \n",
     "print(simple_calc(10, \"multiply\", 5))   \n",
-    "print(simple_calc(10, \"divide\", 0))   \n",
+    "print(simple_calc(10, \"divide\", 3))   \n",
     "print(simple_calc(10, \"ma\", 5))   "
    ]
   },
@@ -136,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +166,7 @@
       "<class 'numpy.ndarray'>\n",
       "my_first_array: [1 2 3 4 5]\n",
       "my_second_array: [1 2 3]\n",
-      "my_third_array: [3 6 9]\n"
+      "my_third_array: [-2 -1  0]\n"
      ]
     }
    ],
@@ -184,10 +183,10 @@
     "print(type(my_first_array))\n",
     "\n",
     "# Step 4\n",
-    "my_second_array = my_first_array[:3]\n",
+    "my_second_array = my_first_array[:3] #[i:j:k]\n",
     "\n",
     "# Step 5\n",
-    "my_third_array = my_second_array * 3\n",
+    "my_third_array = my_second_array - 3\n",
     "\n",
     "#Print the arrays to check\n",
     "print(\"my_first_array:\", my_first_array)\n",
@@ -204,16 +203,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1 2 3 3 6 9]\n",
-      "[[1 2 3]\n",
-      " [3 6 9]]\n",
+      "[ 1  2  3 -2 -1  0]\n",
+      "[[ 1  2  3]\n",
+      " [-2 -1  0]]\n",
       "[1 2 3 4 5 1 2 3]\n"
      ]
     }
