--- a/02_Workshops/WS_02_Libraries_Numpy/DSML_WS_02_post.ipynb
+++ b/02_Workshops/WS_02_Libraries_Numpy/DSML_WS_02_post.ipynb
@@ -1237,7 +1237,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "DSML_env",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -1251,7 +1251,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.0"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
