--- a/02_Workshops/WS_03_Pandas/DSML_WS_03_pre.ipynb
+++ b/02_Workshops/WS_03_Pandas/DSML_WS_03_pre.ipynb
@@ -43,7 +43,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here\n"
+    "# your code here\n",
+    "import numpy as np\n",
+    "\n",
+    "students_scores = np.random.randint(0, 101, size=(15, 3))\n",
+    "print(students_scores)\n",
+    "\n",
+    "# Calculate the average score for test 1 of each student\n",
+    "average_test1 = np.mean(students_scores[:, 0])\n",
+    "print(\"Average score for test 1:\", average_test1)\n",
+    "\n",
+    "#Add Thomas as a new row to student_scores\n",
+    "thomas_scores = np.array([[average_test1, 87, 93]])\n",
+    "students_scores_thomas = np.vstack((students_scores, thomas_scores))\n",
+    "print(students_scores_thomas)\n",
+    "\n",
+    "#Sum of all scores for each student\n",
+    "student_totals = np.sum(students_scores_thomas, axis=1)\n",
+    "print(\"Sum of all scores for each student:\", student_totals)\n",
+    "\n",
+    "# Total scores as percentage of maximum possible score\n",
+    "student_pct = student_totals / 300 * 100\n",
+    "print(\"Total scores as percentage of maximum possible score:\", student_pct)"
    ]
   },
   {
@@ -64,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,11 +101,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0    Helena\n",
+      "1       Tom\n",
+      "2      Nina\n",
+      "3       Sam\n",
+      "4       Kim\n",
+      "dtype: object\n",
+      "0    15\n",
+      "1    15\n",
+      "2    16\n",
+      "3    17\n",
+      "4    16\n",
+      "dtype: int64\n",
+      "0    75\n",
+      "1    69\n",
+      "2    87\n",
+      "3    88\n",
+      "4    54\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here\n"
+    "# your code here\n",
+    "names = pd.Series(['Helena', 'Tom', 'Nina', 'Sam', 'Kim'])\n",
+    "print(names)\n",
+    "\n",
+    "ages = pd.Series([15, 15, 16, 17, 16])\n",
+    "print(ages)\n",
+    "\n",
+    "scores = pd.Series([75, 69, 87, 88, 54])\n",
+    "print(scores)"
    ]
   },
   {
@@ -96,11 +150,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   name_1  age_1  score_1\n",
+      "0  Helena     15       75\n",
+      "1     Tom     15       69\n",
+      "2    Nina     16       87\n",
+      "3     Sam     17       88\n",
+      "4     Kim     16       54\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here\n"
+    "# your code here\n",
+    "students = pd.DataFrame({'name_1': names, 'age_1': ages, 'score_1': scores})\n",
+    "print(students)"
    ]
   },
   {
@@ -112,11 +181,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0    15\n",
+      "1    15\n",
+      "2    16\n",
+      "3    17\n",
+      "4    16\n",
+      "Name: age_1, dtype: int64\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here\n"
+    "# your code here\n",
+    "print(students.loc[:, 'age_1'])"
    ]
   },
   {
@@ -128,17 +211,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  name_1  age_1  score_1\n",
+      "2   Nina     16       87\n",
+      "3    Sam     17       88\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here\n"
+    "# your code here\n",
+    "print(students.loc[students.score_1 >= 80, :])"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "DSML_env",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -152,7 +246,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
