--- a/02_Workshops/WS_04_Visualization/DSML_WS_04_pre.ipynb
+++ b/02_Workshops/WS_04_Visualization/DSML_WS_04_pre.ipynb
@@ -50,7 +50,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here\n"
+    "# your code here\n",
+    "import pandas as pd\n",
+    "\n",
+    "flightInfo = pd.read_csv(\"business_flights_cologne_2019.csv\", sep=\";\")\n",
+    "\n",
+    "print(flightInfo.info()) # No missing values\n",
+    "\n",
+    "print(\"Amount of flights in 2019: \" + str(flightInfo[\"flights\"].sum())) \n",
+    "\n",
+    "print(\"Amount of CO2 emission in 2019: \" + str(flightInfo[\"CO2\"].sum())) \n",
+    "\n",
+    "# Which routes have the most CO2 emissions?\n",
+    "flightInfo[\"CO2/flight/person\"] = (flightInfo[\"CO2\"] / flightInfo[\"flights\"] / flightInfo[\"persons\"]).round(2)\n",
+    "print(\"10 most CO2 intensive flights per person:\")\n",
+    "print(flightInfo.sort_values(by=\"CO2/flight/person\", ascending=False, inplace=False).head(10))\n",
+    "\n",
+    "# Which unit has the most flights?\n",
+    "flights_by_unit = flightInfo.groupby(\"unit\")[\"flights\"].sum()\n",
+    "flights_by_unit = flights_by_unit.sort_values(ascending=False)\n",
+    "print(\"10 most units with most flights:\")\n",
+    "print(flights_by_unit.head(10))\n",
+    "\n",
+    "#What are the most popular destinations?\n",
+    "destinations = flightInfo.groupby(\"destination\")[\"flights\"].sum()\n",
+    "destinations = destinations.sort_values(ascending=False)\n",
+    "print(\"10 most popular destinations:\")\n",
+    "print(destinations.head(10))\n",
+    "\n"
    ]
   },
   {
@@ -93,7 +120,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here\n"
+    "# your code here\n",
+    "weekdays = [\"Monday\", \"Tuesday\", \"Wednesday\", \"Thursday\", \"Friday\", \"Saturday\", \"Sunday\"]\n",
+    "steps = [1000, 20, 30, 400, 50, 60, 70]"
    ]
   },
   {
@@ -109,7 +138,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here\n"
+    "# your code here\n",
+    "plt.plot(weekdays, steps)\n",
+    "plt.title(\"Steps per Weekdays\")\n",
+    "plt.show()"
    ]
   },
   {
@@ -125,7 +157,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here\n"
+    "# your code here\n",
+    "goal = 10000\n",
+    "plt.plot(weekdays, [goal] * len(weekdays), label=\"Goal\")\n",
+    "plt.plot(weekdays, steps, label=\"Steps\")\n",
+    "plt.legend()\n",
+    "plt.title(\"Steps per Weekdays v Goal\")\n",
+    "plt.xlabel(\"Weekdays\")\n",
+    "plt.ylabel(\"Steps\")\n",
+    "plt.show()"
    ]
   },
   {
@@ -136,34 +176,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# your code here\n"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "Finally, let's add a title and labels for the x-axis and y-axis. We can do so by calling `plt.title(\"title\")`, `plt.xlabel(\"xlabel\")`, and `plt.ylabel(\"ylabel\")` before plt.show(). Create a final version of your plot with corresponding title and labels below."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# your code here\n"
-   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "DSML_env",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -177,7 +199,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
