--- a/02_Workshops/WS_03_Pandas/DSML_WS_03_post.ipynb
+++ b/02_Workshops/WS_03_Pandas/DSML_WS_03_post.ipynb
@@ -1378,9 +1378,105 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 97,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Sepal.Length</th>\n",
+       "      <th>Sepal.Width</th>\n",
+       "      <th>Petal.Length</th>\n",
+       "      <th>Petal.Width</th>\n",
+       "      <th>Species</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>number</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>5.1</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>setosa</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>4.9</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>setosa</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4.7</td>\n",
+       "      <td>3.2</td>\n",
+       "      <td>1.3</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>setosa</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4.6</td>\n",
+       "      <td>3.1</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>setosa</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>5.0</td>\n",
+       "      <td>3.6</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>setosa</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        Sepal.Length  Sepal.Width  Petal.Length  Petal.Width Species\n",
+       "number                                                              \n",
+       "1                5.1          3.5           1.4          0.2  setosa\n",
+       "2                4.9          3.0           1.4          0.2  setosa\n",
+       "3                4.7          3.2           1.3          0.2  setosa\n",
+       "4                4.6          3.1           1.5          0.2  setosa\n",
+       "5                5.0          3.6           1.4          0.2  setosa"
+      ]
+     },
+     "execution_count": 97,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# examine the first 5 rows using .head()\n",
     "iris_set.head()"
@@ -1388,9 +1484,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 100,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Sepal.Length', 'Sepal.Width', 'Petal.Length', 'Petal.Width',\n",
+       "       'Species'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 100,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# return all column names using .columns\n",
     "iris_set.columns"
@@ -1459,11 +1568,164 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 94,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Sepal.Length</th>\n",
+       "      <th>Sepal.Width</th>\n",
+       "      <th>Petal.Length</th>\n",
+       "      <th>Petal.Width</th>\n",
+       "      <th>Species</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>number</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>146</th>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>147</th>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>148</th>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>149</th>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>150</th>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>150 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        Sepal.Length  Sepal.Width  Petal.Length  Petal.Width  Species\n",
+       "number                                                               \n",
+       "1              False        False         False        False    False\n",
+       "2              False        False         False        False    False\n",
+       "3              False        False         False        False    False\n",
+       "4              False        False         False        False    False\n",
+       "5              False        False         False        False    False\n",
+       "...              ...          ...           ...          ...      ...\n",
+       "146            False        False         False        False    False\n",
+       "147            False        False         False        False    False\n",
+       "148            False        False         False        False    False\n",
+       "149            False        False         False        False    False\n",
+       "150            False        False         False        False    False\n",
+       "\n",
+       "[150 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 94,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# .isnull() returns \"True\" for every missing numerical value in the dataset\n",
     "iris_set.isnull()"
@@ -1481,9 +1743,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 96,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Sepal.Length</th>\n",
+       "      <th>Sepal.Width</th>\n",
+       "      <th>Petal.Length</th>\n",
+       "      <th>Petal.Width</th>\n",
+       "      <th>Species</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>number</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>5.1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.7</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>setosa</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        Sepal.Length  Sepal.Width  Petal.Length  Petal.Width Species\n",
+       "number                                                              \n",
+       "24               5.1          NaN           1.7          0.5  setosa"
+      ]
+     },
+     "execution_count": 96,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# we can also use masking to display rows with null values in a specific column\n",
     "iris_set[iris_set[\"Sepal.Width\"].isnull() == True]"
@@ -1491,9 +1813,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 95,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Sepal.Length</th>\n",
+       "      <th>Sepal.Width</th>\n",
+       "      <th>Petal.Length</th>\n",
+       "      <th>Petal.Width</th>\n",
+       "      <th>Species</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>number</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>5.1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.7</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>setosa</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>79</th>\n",
+       "      <td>6.0</td>\n",
+       "      <td>2.9</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>versicolor</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        Sepal.Length  Sepal.Width  Petal.Length  Petal.Width     Species\n",
+       "number                                                                  \n",
+       "24               5.1          NaN           1.7          0.5      setosa\n",
+       "79               6.0          2.9           NaN          1.5  versicolor"
+      ]
+     },
+     "execution_count": 95,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# we can also use masking to display rows with null values in any column\n",
     "iris_set[iris_set.isnull().any(axis=1) == True]"
@@ -1646,9 +2037,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 101,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Sepal.Length</th>\n",
+       "      <th>Sepal.Width</th>\n",
+       "      <th>Petal.Length</th>\n",
+       "      <th>Petal.Width</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Species</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>setosa</th>\n",
+       "      <td>5.006000</td>\n",
+       "      <td>3.430612</td>\n",
+       "      <td>1.462000</td>\n",
+       "      <td>0.246</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>versicolor</th>\n",
+       "      <td>5.936000</td>\n",
+       "      <td>2.770000</td>\n",
+       "      <td>4.255102</td>\n",
+       "      <td>1.326</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>virginica</th>\n",
+       "      <td>6.541108</td>\n",
+       "      <td>2.974000</td>\n",
+       "      <td>5.552000</td>\n",
+       "      <td>2.026</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            Sepal.Length  Sepal.Width  Petal.Length  Petal.Width\n",
+       "Species                                                         \n",
+       "setosa          5.006000     3.430612      1.462000        0.246\n",
+       "versicolor      5.936000     2.770000      4.255102        1.326\n",
+       "virginica       6.541108     2.974000      5.552000        2.026"
+      ]
+     },
+     "execution_count": 101,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# let's get some summary statistics for the different species (setosa, versicolor, virginica), e.g. the mean of our four features\n",
     "species_groups_mean = iris_set.groupby(\"Species\").mean()\n",
@@ -1704,7 +2168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1714,9 +2178,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 99,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Sepal.Length</th>\n",
+       "      <th>Sepal.Width</th>\n",
+       "      <th>Petal.Length</th>\n",
+       "      <th>Petal.Width</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Species</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>setosa</th>\n",
+       "      <td>5.8</td>\n",
+       "      <td>3.430612</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.246</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>versicolor</th>\n",
+       "      <td>7.0</td>\n",
+       "      <td>2.770000</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1.326</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>virginica</th>\n",
+       "      <td>7.9</td>\n",
+       "      <td>2.974000</td>\n",
+       "      <td>4.5</td>\n",
+       "      <td>2.026</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            Sepal.Length  Sepal.Width  Petal.Length  Petal.Width\n",
+       "Species                                                         \n",
+       "setosa               5.8     3.430612           1.0        0.246\n",
+       "versicolor           7.0     2.770000           3.0        1.326\n",
+       "virginica            7.9     2.974000           4.5        2.026"
+      ]
+     },
+     "execution_count": 99,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "species_groups_custom"
    ]
@@ -1731,7 +2268,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "DSML_env",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -1745,7 +2282,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.0"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
