--- a/02_Workshops/WS_06_ML_Intro/DSML_WS_06_pre.ipynb
+++ b/02_Workshops/WS_06_ML_Intro/DSML_WS_06_pre.ipynb
@@ -57,7 +57,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here\n"
+    "# your code here\n",
+    "tips.plot(kind=\"scatter\", x=\"total_bill\", y=\"tip\")\n",
+    "plt.title(\"Scatter plot of total bill vs tip\")\n",
+    "plt.xlabel(\"Total Bill\")\n",
+    "plt.ylabel(\"Tip\")\n",
+    "plt.show()"
    ]
   },
   {
@@ -84,7 +89,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here\n"
+    "# your code here\n",
+    "theta1 = 0.15\n",
+    "theta2 = -0.1"
    ]
   },
   {
@@ -100,7 +107,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here\n"
+    "# your code here\n",
+    "fig, ax = plt.subplots()\n",
+    "sns.scatterplot(data=tips, x=\"total_bill\", y=\"tip\")\n",
+    "plt.plot([0,50], [theta1*0+theta2, theta1*50+theta2], color=\"green\")\n",
+    "plt.show()"
    ]
   },
   {
@@ -116,13 +127,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here\n"
+    "# your code here\n",
+    "predictions = theta1 * 17 + theta2\n",
+    "print(f\"Predicted tip for a total bill of 17: {predictions}\")\n",
+    "print(f\"Predicted tip difference to actual tip {abs(predictions - 1)}\")"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "DSML_env",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -136,7 +150,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
